--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="./dist/bundle.js"></script>
+  <script src="https://www.promisejs.org/polyfills/promise-6.1.0.js"></script>
+  <script>
+    
+  </script>
 </body>
 </html>
